flux-clusters/piserver/apps/demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-http
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-http
  template:
    metadata:
      labels:
        app: demo-http
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.10.1
          ports:
            - containerPort: 80
