flux-clusters/piserver/apps/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-http
  namespace: demo
spec:
  selector:
    app: demo-http
  ports:
    - port: 80
      targetPort: 80
