flux-clusters/piserver/apps/demo/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: demo
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: flux-system
      sectionName: websecure # only for https traffic
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /demo
      backendRefs:
        - name: demo-http
          port: 80
